--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,12 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/watching/watching",
+    "pages/profile/profile",
+    "pages/events/events",
+    "pages/notifications/notifications",
+    "pages/issues/issues",
+    "pages/issue/issue",
     "pages/login/login",
     "pages/search/search",
     "pages/userConsole/userConsole",
@@ -15,7 +21,8 @@
     "pages/commits/commits",
     "pages/branches/branches",
     "pages/releases/releases",
-    "pages/contributors/contributors"
+    "pages/contributors/contributors",
+    "pages/repos/repos"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -25,6 +32,7 @@
     "navigationBarTitleText": "OPEN HUB"
   },
   "usingComponents": {
+    "comi": "./components/comi/comi",
     "base": "./components/base/base"
   },
   "tabBar": {
@@ -41,6 +49,12 @@
         "iconPath": "/images/tabs/search.png",
         "selectedIconPath": "/images/tabs/search-1.png",
         "text": "搜索"
+      },
+      {
+        "pagePath": "pages/profile/profile",
+        "iconPath": "/images/tabs/github.png",
+        "selectedIconPath": "/images/tabs/github-1.png",
+        "text": "我的"
       }
     ]
   },
